sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: not found: value swapped
   swapped = false 
   ^AlgBubbleSort3:13: error: not found: value swapped
        swapped = true
        ^AlgBubbleSort3:16: error: not found: value swapped
    if(!swapped)
        ^