sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var n = getValueCount();
	
  for(i <- n-1 to 0 by -1)
  {
   swapped = false 
    for(j<-0 to i-1)
    {
      if (plusPetit(j+1,j))
      {
        echange(j,j+1)
        swapped = true
      }
    }
    if(!swapped)
    return;
  }  
}